tests/resource_files_with_module_name_wrapper/test.js
(require("./foo.css"): string); // error: boolean ~> string
